--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,10 +1,23 @@
 body {
     margin: 0;
-    font-family: 'Arial', 'Helvetica', sans-serif;
+    font-family: "Arial", "Helvetica", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
-:root, #root, body {
+.responsive-box {
+    width: 65%;
+    transition: width 0.3s ease;
+}
+
+@media (max-width: 600px) {
+    .responsive-box {
+        width: 90%;
+    }
+}
+
+:root,
+#root,
+body {
     height: 100%;
 }
